feat: get questionnare ready status
