# docs/swagger.json
@@ -338,6 +338,64 @@
                 }
             }
         },
+        "/questionnare/ready": {
+            "get": {
+                "description": "Get questionnare ready status",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Questionnare",
+                    "Student"
+                ],
+                "summary": "Get questionnare ready status",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httputil.DataJsonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/schemas.QuestionnareReadyResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorJsonResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/questionnare/settings": {
             "get": {
                 "description": "Get questionnare settings",
@@ -1167,6 +1225,14 @@
                 },
                 "type": {
                     "type": "string"
+                }
+            }
+        },
+        "schemas.QuestionnareReadyResponse": {
+            "type": "object",
+            "properties": {
+                "ready": {
+                    "type": "boolean"
                 }
             }
         },
